overlays/dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/name: dev
  name: dev
